# rust_e2e

./: Cargo.toml
src/: .crypto.rs.swp  .user.rs.swp  client.rs  connection.rs  crypto.rs  friend.rs  main.rs  user.rs
src/client/: crypto.rs  friend.rs  message.rs  user.rs
