[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
base64 = "0.21.0"
chrono = "0.4.24"
openssl = "0.10.50"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
sha256 = "1.1.2"
uuid = { version = "1.3.1", features = ["v4"] }
